# langchain-works

./: LICENSE  Makefile  README.md  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt
mini_qa/: __init__.py  _version.py  cli.py  vector_db.py  vector_db_agent.py
tests/: test_module1.py
tests/test_module2/: test_module2.py
